fixed nav spacing

--- a/style1.css
+++ b/style1.css
@@ -41,7 +41,7 @@ nav ul li a {
 	color: white;
 	text-decoration: none;
 	overflow: hidden;
-	padding: .15em 1em 0 1em;
+	padding: .2em 1em 0 1em;
 	vertical-align: middle;
 	font-weight: 200;
 } 
